# 3Dlitematica

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: upload.yml
t3dlitematica/: __init__.py  __main__.py
t3dlitematica/litematicadecoder/: LitematicaHandler.py  NBTHandler.py  Utilities.py  __init__.py  bitstack.py
t3dlitematica/objbuilder/: __init__.py  mctoobj.py  toobj.py
t3dlitematica/texturepackexport/: __init__.py  convert.py  multiload.py
